--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -4,6 +4,10 @@ unit.gold-rgb-trio.description = The three very armored battleships: [red]Bloods
 unit.gold-bloodsteel.name = Bloodsteel
 unit.gold-pladium.name = Pladium
 unit.gold-graveles.name = Graveles
+unit.gold-baldi-mech.name = Baldi mech
 sector.gold-ground-one.name = Ground One
+sector.gold-scheme-battle.name = Scheme battle
+sector.gold-abandoned-laboratory.name = Abandoned Laboratory
+sector.gold-oil-town.name = Oil Town
 planet.gold-zuila.name = Zuila
 techtree.zuila = Zuila
