--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,6 @@
 gold.disclaimer = [gold]Disc[orange]laimer
+block.gold-core-shiny.name = Core: Shiny
+block.gold-core-solar.name = Core: Solar
 unit.gold-rgb-trio.name = RGB Trio
 unit.gold-rgb-trio.description = The three very armored battleships: [red]Bloodsteel, [blue]Pladium, [lime]Graveles
 unit.gold-bloodsteel.name = Bloodsteel
@@ -10,4 +12,5 @@ sector.gold-scheme-battle.name = Scheme battle
 sector.gold-abandoned-laboratory.name = Abandoned Laboratory
 sector.gold-oil-town.name = Oil Town
 planet.gold-zuila.name = Zuila
+planet.gold-falren.name = Falren
 techtree.zuila = Zuila
