--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -14,3 +14,8 @@ sector.gold-oil-town.name = Oil Town
 planet.gold-zuila.name = Zuila
 planet.gold-falren.name = Falren
 techtree.zuila = Zuila
+toast.congratulation = [lime]Congratulation[]
+toast.hehe = [lime]Hahahahaha[]
+toast.core = [lime]You destroy all 7 cores[]
+toast.but = [lime]But you need to do[]
+toast.getOut = [red]GET OUT NOW STILL YOU CAN[]
